[project]
name = "pneumatic-gun-simulators"
version = "0.1.0"
description = "Simulators for precompressed air and spring piston guns"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "scipy==1.16.*",
    "matplotlib==3.10.*",
]

[project.scripts]
nomad-simulator = "nomad_ui:main"
spring-plunger-simulator = "dart_plunger_gui:main"

[tool.uv]
python-preference = "only-managed"
add-bounds = "minor"